# summa1

./: DEPLOYMENT.md  Dockerfile  Jenkinsfile  docker-compose.yml  nginx-wasm.conf  nginx.conf  package-lock.json  package.json  vite.config.js
k8s/: configmap.yaml  frontend-deployment.yaml  ingress.yaml  python-deployment.yaml  rust-deployment.yaml  wasm-deployments.yaml
public/: wasm-loader.js
public/wasm/: python-analyzer.py
python-wasm/: Dockerfile  analyzer.py  requirements.txt  service.py
rust-wasm/: Cargo.toml  Dockerfile
rust-wasm/src/: converter.rs  main.rs  types.rs
scripts/: local-setup.sh
src/: App.jsx  App.tsx
src/components/: ConversionProgress.tsx  DragAndDropFile.jsx  DragAndDropFile.tsx
src/config/: examConfigs.ts
src/services/: wasmService.ts
src/types/: index.ts
wasm-modules/python-analyzer/: Dockerfile  analyzer.py  build.py  requirements.txt
wasm-modules/rust-converter/: Cargo.toml  Dockerfile  build.sh  nginx.conf
wasm-modules/rust-converter/src/: lib.rs
