[package]
name = "document-converter"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
image = "0.24"
pdf = "0.8"
docx = "0.2"
base64 = "0.21"
uuid = { version = "1.0", features = ["v4"] }
env_logger = "0.10"
log = "0.4"

[lib]
crate-type = ["cdylib"]