[package]
name = "document-converter-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "js"] }
js-sys = "0.3"
web-sys = "0.3"

# Image processing (WASM-compatible)
image = { version = "0.24", default-features = false, features = ["jpeg", "png"] }

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Blob",
  "BlobPropertyBag",
  "File",
  "FileReader",
  "Url",
]